<resources>
    <string name="app_name">PopularMovies</string>
    <string name="error_message">Sorry! Try Again!</string>
    <string name="movie_user_rating">User Rating:</string>
    <string name="release_date">Release: </string>
    <string name="popularity">Popularity</string>
    <string name="top_rated_string">Top Rated</string>
    <string name="trailers_title">Trailers:</string>
    <string name="overview_title">Overview:</string>
    <string name="reviews_title">Reviews:</string>
</resources>
